tests/snapshots/examples_fixtures/diagnostics__errors__unknown_keyword_fn_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics/errors/unknown_keyword_fn_error.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
